<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <cn.hujw.titlebar.library.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/password_reset_title"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password_reset_password1"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_small_safe"
        android:drawablePadding="15dp"
        android:hint="@string/password_reset_phone_hint1"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="18dp"
        android:paddingRight="20dp"
        android:paddingBottom="18dp" />


    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password_reset_password2"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_small_safe"
        android:drawablePadding="15dp"
        android:hint="@string/password_reset_phone_hint2"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="18dp"
        android:paddingRight="20dp"
        android:paddingBottom="18dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_password_reset_commit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/common_step_complete" />

</LinearLayout>