<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.hujw.titlebar.library.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backButton="false"
        app:barStyle="transparent"
        app:leftColor="@color/colorAccent"
        app:leftTitle="@string/register_login" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            android:orientation="vertical"
            tools:layoutAnimation="@null">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/register_title"
                android:textColor="@color/black60"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/register_hint"
                android:textColor="@color/black20"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/ll_register_edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <cn.hujw.widget.view.RegexEditText
                        android:id="@+id/et_register_user_name"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/common_user_name_input_hint"
                        android:inputType="textVisiblePassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <View
                        style="@style/HorizontalLineStyle"
                        android:layout_gravity="bottom" />

                </FrameLayout>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_register_password1"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/register_password_hint1"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1" />

            <View style="@style/HorizontalLineStyle" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_register_password2"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/register_password_hint2"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1" />

            <View style="@style/HorizontalLineStyle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register_commit"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/register_title" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>