<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    tools:context=".module.mine.activity.SettingActivity">

    <cn.hujw.titlebar.library.TitleBar
        style="@style/TitleBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/setting_title" />


    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?android:attr/colorBackground"
        app:cardCornerRadius="10dp"
        app:cardElevation="0px">

        <LinearLayout
            android:background="?android:attr/colorBackground"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <cn.hujw.widget.layout.SettingBar
                android:id="@+id/sb_setting_update"
                android:layout_width="match_parent"
                app:bar_rightColor="?android:attr/textColorPrimary"
                android:layout_height="wrap_content"
                android:background="?android:attr/colorBackground"
                app:bar_leftColor="?android:attr/textColorPrimary"
                app:bar_leftText="@string/setting_update"
                app:bar_rightIcon="@drawable/ico_go_black"/>

            <cn.hujw.widget.layout.SettingBar
                app:bar_rightColor="?android:attr/textColorPrimary"
                android:background="?android:attr/colorBackground"
                app:bar_leftColor="?android:attr/textColorPrimary"
                android:id="@+id/sb_setting_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/setting_cache"
                app:bar_rightIcon="@drawable/ico_go_black"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="?android:attr/colorBackground"
        app:cardElevation="0px">

        <LinearLayout
            android:orientation="vertical"
            android:background="?android:attr/colorBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <cn.hujw.widget.layout.SettingBar
                app:bar_rightColor="?android:attr/textColorPrimary"
                android:background="?android:attr/colorBackground"
                app:bar_leftColor="?android:attr/textColorPrimary"
                android:id="@+id/sb_setting_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/setting_agreement"
                app:bar_rightIcon="@drawable/ico_go_black"/>

            <cn.hujw.widget.layout.SettingBar
                app:bar_rightColor="?android:attr/textColorPrimary"
                android:background="?android:attr/colorBackground"
                app:bar_leftColor="?android:attr/textColorPrimary"
                android:id="@+id/sb_setting_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="关于WanAndroid"
                app:bar_rightIcon="@drawable/ico_go_black" />



        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="0px">
        <cn.hujw.widget.layout.SettingBar
            app:bar_rightColor="?android:attr/textColorPrimary"
            android:background="?android:attr/colorBackground"
            android:id="@+id/sb_setting_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bar_leftColor="?android:attr/textColorPrimary"
            app:bar_leftText="@string/setting_exit"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>