<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <cn.hujw.titlebar.library.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="忘记密码" />

    <cn.hujw.widget.view.RegexEditText
        android:id="@+id/et_password_forget_phone"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_small_phone"
        android:hint="@string/common_phone_input_hint"
        android:paddingLeft="16dp"
        android:paddingTop="18dp"
        android:paddingRight="16dp"
        android:paddingBottom="18dp"
        android:drawablePadding="15dp"
        android:singleLine="true"
        app:regexType="mobile"/>

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password_forget_code"
            style="@style/EditTextStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_small_safe"
            android:drawablePadding="15dp"
            android:hint="@string/common_code_input_hint"
            android:paddingLeft="16dp"
            android:paddingTop="18dp"
            android:paddingRight="16dp"
            android:paddingBottom="18dp"
            android:singleLine="true" />

        <cn.hujw.widget.view.CountdownView
            android:id="@+id/cv_password_forget_countdown"
            style="@style/CountdownViewStyle" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_password_forget_commit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:text="@string/common_step_next" />
</LinearLayout>