<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:layoutAnimation="@anim/layout_animation_from_bottom"
    android:orientation="vertical"
    tools:layoutAnimation="@null">

    <cn.hujw.titlebar.library.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backButton="false"
        app:barStyle="transparent"
        app:rightColor="@color/colorAccent"
        app:rightTitle="注册" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/ll_login_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <cn.hujw.widget.view.ClearEditText
            android:id="@+id/et_login_user_name"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:hint="@string/common_user_name_input_hint"
            android:inputType="textVisiblePassword"
            android:singleLine="true" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

        <cn.hujw.widget.view.PasswordEditText
            android:id="@+id/et_login_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:hint="@string/common_password_input_error"
            android:maxLength="20"
            android:maxLines="1" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:visibility="gone"
            android:id="@+id/tv_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="16dp"
            android:text="@string/login_forget"
            android:textColor="@color/colorAccent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_commit"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:text="@string/login_text" />
    </LinearLayout>

    <View
        android:id="@+id/v_login_blank"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="5" />

    <LinearLayout
        android:id="@+id/ll_login_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            style="@style/HorizontalLineStyle"
            android:layout_width="60dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/login_other"
            android:textColor="@color/black50" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_width="60dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <cn.hujw.widget.view.ScaleImageView
            android:id="@+id/iv_login_qq"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:src="@drawable/ic_login_qq"
            app:scaleRatio="1.2" />

        <cn.hujw.widget.view.ScaleImageView
            android:id="@+id/iv_login_weChat"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:src="@drawable/ic_login_wx"
            app:scaleRatio="1.2" />
    </LinearLayout>

</LinearLayout>